# kafka_cluster_example

./: admin.py  consumer.py  docker-compose.yaml  json_producer.py  producer.py  pyproject.toml
