[tool.poetry]
name = "kafka-cluster-example"
version = "0.1.0"
description = ""
authors = ["sergiup592 <spopusoi592@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
confluent-kafka = "^2.6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
